Configure all the relevant tasks